fleshing out the hero

--- a/index.html
+++ b/index.html
@@ -8,14 +8,26 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="header">
-        <p> Header Logo </p>
-        <ul>
-            <li>header link one</li>
-            <li>header link two</li>
-            <li>header link three</li>
+    <div class="hero">
+        <div class="header">
+            <p id="headerlogo"> Header Logo </p>
+            <ul>
+                <li>header link one</li>
+                <li>header link two</li>
+                <li>header link three</li>
+            </ul>
+        </div>
 
-        </ul>
+        <div class = "herolower">
+            <div>
+                <p class="main">This website is awesome</p>
+                <p>This has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                <button> Sign up</button>
+            </div>
+            <div id="imageplaceholder">
+                this is a placeholder for an image
+            </div>
+        </div>
     </div>
 
     <div class="body">
