Began work on section 1

--- a/index.html
+++ b/index.html
@@ -31,6 +31,34 @@
     </div>
 
     <div class="body">
+        <div class="one">
+            <p id="randominfo">Some random information.</p>
+            <div class="boxes">
+                <div class="info">
+                    <div class="box"></div>
+                    <div>this is some subtext under an illustration or image</div>
+                </div>
+                <div class="info">
+                    <div class="box"></div>
+                    <div>this is some subtext under an illustration or image</div>
+                </div>
+                <div class="info">
+                    <div class="box"></div>
+                    <div>this is some subtext under an illustration or image</div>
+                </div>
+                <div class="info">
+                    <div class="box"></div>
+                    <div>this is some subtext under an illustration or image</div>
+                </div>
+            </div>
+
+        </div>
+        <div class="two">
+
+        </div>
+        <div class="three">
+
+        </div>
 
     </div>
 
